2007-01-25  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		changed toolbar button order. 

2007-01-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* README.txt: Cleaned up unneccesary white spaces and empty lines.
		Tiny typo.

2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/PatternExt.java:
	  render WKTFillPattern (BasicFillPattern) to a texture
		and use this as fill pattern.
		
2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/PatternExt.java:
		added. A simple Batik ExtensionHandler which catches 
		com.vividsolutions.jump.workbench.ui.renderer.style.WKTFillPattern
		Paint objects and replaces it with color "red".
		TODO: Figure out how to generate an adequate 
		SVG fill pattern.

	* src/de/intevation/printlayout/LayoutFrame.java:
		uses the ExtensionHandler

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* etc/build.xml,
	  etc/build.properties:
	  	added a "javadoc" target to the ant script.
		This target uses javadoc to create a documentation
		for the whole plugin to the "doc" directory.

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		included a text toggle button.

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* src/de/intevation/printlayout/LayoutFrame.java:
		changed the text of the toogle buttons
		to tooltiptext.

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* lib/batik-all.jar,
	  lib/js.jar,
	  lib/pdf-transcoder.jar,
	  lib/xml-apis-ext.jar,
	  lib/xml-apis.jar:
	  	switch to the new batik svn version, because of
		some changes in the pdf-transcoder.jar.

2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* src/de/intevation/printlayout/LayoutFrame.java:
		added icons for the toggle buttons.

2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>
